2011-06-09 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFByteOrder.c: Delete CFByteOrder.c.
	* Headers/CoreFoundation/CFByteOrder.h: Inline byte order functions.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Fixed a few bugs.
	* Tests/CFString/mutablestring.m: Modified tests.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented CFStringReplace().
	* Tests/CFString/mutablestring.m: Added more tests.

2011-06-04 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Use CFStringInlineBuffer where appropriate.
	Also added CFStringTimeWhitespace().
	* Source/CFStringEncoding.c: Fixed a bug uncovered by tests.
	* Tests/CFString/create.m:
	* Tests/CFString/mutablestring.m: Added a few more tests.

2011-06-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c:
	* Source/CFStringEncoding.c: Fixed bugs uncovered by tests.
	* Tests/CFString/mutablestring.m: Added CFMutableString tests.

2011-06-03 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Implemented a few more functions.
	* Headers/CoreFoundation/ForFoundationOnly.h: Added 2 more functions
	to be used internally by CoreFoundation and Foundation.

2011-05-31 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/internal.h: Define mutex functions to be used internally.
	* Source/CFLocale.c:
	* Source/CFRuntime.m: Use a mutex instead of spinlock.

2011-05-30 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Added CFStringNormalize and CFStringTransform.
	* Source/NSCFString.m: Return CFString's type ID.

2011-05-29 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCFString.m: Add NSCFString class.

2011-05-27 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/CFString.c: Added case mapping functions to CFMutableString.

2011-05-26 Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile:
	* Source/CFString.c: